--- a/Web-tech/lab 5/lab 5_1.html
+++ b/Web-tech/lab 5/lab 5_1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Дерево</h1>
-    <img src="../picture/tree.jpg" alt="Дерево">
+    <img src="../../picture/tree.jpg" alt="Дерево">
 
     <h1>Гральний кубик</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrwZLYnP6rNWt1-cOvW9HGnfKVfNx3cTKupA&s" alt="Гральний кубик">
